<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AccroDesTournois</string>
    <string name="app_name_bis">Accro Des Tournois</string>
    <string name="helloWorld">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="tournamentDate">Tournament date</string>
    <string name="tournamentDetails">Tournament details + number of days</string>
    <string name="tournamentPlace">Tournament place</string>
    <string name="sizeDay">16</string>
    <string name="sizeMonth">Jun</string>

    
    <!-- ProgressDialog -->
    <string name="mainProgress">Retrieving the list of tournaments</string>
    <string name="loading">Loading...</string>
    <string name="titleActivityTournament">Tournament</string>
    <string name="tournamentProgress">Retrieving the tournament</string>
    
    
    <!-- Tournoi Fragment -->
    <string name="subtitleTournament">Tournament name</string>
    <string name="variousInfos">Type of surface and type of tournament</string>
    <string name="publisher">Tournament published by <b>publisher</b></string>

    
    <!-- INFORMATIONS COMPLÉMENTAIRES -->
    <string name="additionalInfo"><u>Additional informations</u></string>
    <string name="infos"    >
        Beginning hour of the tournament\nFoo bar
    </string>
    
    
    <!-- CONTACT -->
    <string name="contact"><u>Contact</u></string>
    <string name="contactName">Name of the contact</string>
    <string name="contactPhone">06 00 00 00 00</string>
    <string name="contactWebsite">Tournament website</string>
    <string name="contactMail">Send a message</string>
    <!-- <string name="title_activity_tournoi">Tournoi</string>
    <string name="title_activity_tournoi">Tournoi</string>
    -->

</resources>
