<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/darkorange" >

    <LinearLayout
        android:id="@+id/layoutTournament"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin" >


        <!-- HEADER -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/header_tournament"
            android:orientation="vertical"
            android:paddingBottom="5sp"
            android:paddingTop="5sp" >

            <TextView
                android:id="@+id/subtitleTournament"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/subtitleTournament"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/variousInfos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5sp"
                android:gravity="center"
                android:text="@string/variousInfos"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:textStyle="normal" />
        </LinearLayout>

        <!-- TOURNAMENTS IN LIST -->
        <LinearLayout
            android:id="@+id/textV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15sp"
            android:orientation="vertical" />


        <!-- INFORMATIONS COMPLÉMENTAIRES -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/item_tournament_shape"
            android:orientation="vertical">
            <!--android:layout_marginTop="15sp">-->

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:text="@string/additionalInfo"
                android:textSize="18sp"
                android:textStyle="italic" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/font"
                />

            <TextView
                android:id="@+id/additionalInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5sp"
                android:gravity="start"
                android:lineSpacingExtra="5sp"
                android:text="@string/infos"
                android:textSize="14sp"
                android:textStyle="normal" />
        </LinearLayout>


        <!-- CONTACT -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15sp"
            android:background="@drawable/item_tournament_shape"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:text="@string/contact"
                android:textSize="18sp"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/contactName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5sp"
                android:gravity="start"
                android:text="@string/contactName"
                android:textSize="14sp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/contactPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5sp"
                android:gravity="start"
                android:text="@string/contactPhone"
                android:textSize="14sp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/contactWebsite"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5sp"
                android:gravity="start"
                android:text="@string/contactWebsite"
                android:textSize="14sp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/contactMail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5sp"
                android:gravity="start"
                android:text="@string/contactMail"
                android:textSize="14sp"
                android:textStyle="normal" />
        </LinearLayout>

        <!-- PUBLISHER -->
        <TextView
            android:id="@+id/publisher"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="end"
            android:text="@string/publisher"
            android:textSize="10sp"
            android:textStyle="italic" />

    </LinearLayout>
</ScrollView>